// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Speed dial can restart round: reset round 1`] = `
Object {
  "mapId": "test-my-map",
  "mapName": "my map",
  "players": Array [
    "player1",
    "player2",
  ],
  "rounds": Object {
    "current": 2,
    "progress": 0,
    "total": 3,
  },
  "scores": Array [
    Array [
      Object {
        "name": "player2",
        "score": 0,
      },
      Object {
        "name": "player1",
        "score": 0,
      },
    ],
    Array [],
  ],
  "status": "PENDING_PLAYER",
  "timeLimit": 60,
}
`;

exports[`Speed dial can restart round: restart confirmation dialog 1`] = `
Object {
  "confirmMessage": "Restart round",
  "infoMessage": "This will reset the current round progress for all players. The first player will start the current round again in a new location.",
  "onCancelCallback": [Function],
  "onConfirmCallback": [Function],
  "title": "Restart round?",
}
`;

exports[`Speed dial has home navigation: home confirmation dialog 1`] = `
Object {
  "confirmMessage": "Abort game",
  "onCancelCallback": [Function],
  "onConfirmCallback": [Function],
  "title": "Abort the game and return home?",
}
`;
